fix(core): have running state in subflow attempts
closes #4066